--- a/css/style.css
+++ b/css/style.css
@@ -74,9 +74,9 @@ h1 {
 .btn-box {
   position: relative;
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
-  min-width: 50px;
+  min-width: 45px;
   margin-left: 20px;
 }
 
@@ -92,8 +92,8 @@ h1 {
 }
 
 input[type="checkbox"] {
+  margin: 3px 2px 2px 2px;
   cursor: pointer;
-  outline: none;
 }
 
 input[type="checkbox"]:before {
@@ -108,6 +108,7 @@ input[type="checkbox"]:before {
   border-radius: 3px;
   background-color: #94adcf;
 }
+
 input[type="checkbox"]:checked:after {
   content: "";
   display: block;
