--- a/css/style.css
+++ b/css/style.css
@@ -123,3 +123,79 @@ input[type="checkbox"]:checked:after {
   top: 6px;
   left: 6px;
 }
+
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: #474e5d;
+  padding-top: 50px;
+}
+
+.modal-content {
+  width: 70%;
+  margin: 5% auto 15%;
+}
+
+.modal-container {
+  padding: 16px;
+  text-align: center;
+  color: #474e5d;
+  background-color: #94adcf;
+  font-size: 24px;
+  font-weight: bold;
+}
+
+button {
+  width: 100%;
+  padding: 15px 20px;
+  margin: 10px 0;
+  color: #fff;
+  border: none;
+  cursor: pointer;
+  opacity: 0.8;
+}
+
+button:hover {
+  opacity: 1;
+}
+
+.modal-cancel,
+.modal-delete {
+  width: 50%;
+  float: left;
+}
+
+.modal-cancel {
+  background-color: #38404b;
+}
+
+.modal-delete {
+  background-color: #f44336;
+}
+
+.modal-close {
+  position: absolute;
+  right: 5%;
+  top: 5%;
+  font-size: 40px;
+  font-weight: bold;
+  color: #94adcf;
+}
+
+.modal-close:hover,
+.modal-close:focus {
+  color: #f44336;
+  cursor: pointer;
+}
+
+.clearfix::after {
+  content: "";
+  display: table;
+  clear: both;
+}
